# sqlx-clean-querybuilder

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/qb/: delete.rs  insert.rs  mod.rs  qbs.rs  query_builder.rs  select.rs  update.rs
