[package]
name = "sqlx_clean_querybuilder"
version = "0.1.7"
edition = "2024"
authors = ["this.ilecy@gmail.com"]
description = "Simple, clean querybuidler for sqlx!"
license = "MIT OR Apache-2.0"
repository = "https://github.com/this-ILECY/sqlx-clean-querybuilder"
readme = "README.md"
keywords = ["rust", "library", "sqlx", "querybuilder", "postgresql"]

[lib]
name = "sqlx_clean_querybuilder"
path = "src/lib.rs"
crate-type = ["lib"]